Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-99263

QProcess::finished not emitted

XMLWordPrintable

    • macOS
    • 3496f5e2e (134-based-refactor)

      In my project, I have use QProcess to start a child process, before start it, I have connect to QProcess::finished signal, while the child process exit, the signal not emitted, the child process become zombie. The parent process and child process both have use QtWebengine, the same code is work fine on Qt5.15+Windows7&10&11.

       

      I have replace QProcess with boost::process, it not work too.

       

      This maybe a old bug?

      https://bugreports.qt.io/browse/QTBUG-42747

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            allan.jensen Allan Sandfeld Jensen
            laf163 LIU Aifu
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes