Do not override signal handlers

We used to have this, but it got dropped at some point in an adaptions.

Fixes: QTBUG-99263
Change-Id: I3bf86a1b42edca0cd792723c85d7dcb7877fea37
Reviewed-by: Michal Klocek <michal.klocek@qt.io>
(cherry picked from commit fbaab46becbf5ea063a8b4a01abf8cd1d4a1725d)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>